# occam-shaving-rl

./: .gitignore  README.md  array-job.sh  brax_wrapper_code.py  compute-canada-requirements.txt  config.py  generate_configs.py  hyper_info.md  job_submission.sh  plot.py  ppo_continuous_action.py  ppo_discrete_action.py  proxy-testing.sh  pyproject.toml  requirements.txt  requirements_from_uv.txt  script.sh  wrappers.py
cleanrl/: ppo_atari_envpool_xla_jax_scan.py
docs/: index.html
job_scripts/ppo_atari/: submit.sh
job_scripts/ppo_atari/fir/: submit.sh
job_scripts/ppo_atari/vulcan/: submit.sh
job_scripts/ppo_brax/cpu/baseline/: job_submission.sh
job_scripts/ppo_brax/cpu/baseline_with_layernorm/: job_submission.sh
job_scripts/ppo_brax/cpu/brax_paper_baseline/: job_submission.sh
job_scripts/ppo_brax/cpu/brax_small_sweep/: job_submission.sh  submit_all.sh
job_scripts/ppo_brax/cpu/longer_run_baseline/: job_submission.sh
job_scripts/ppo_mujoco/cpu/: job_submission.sh
job_scripts/ppo_mujoco/cpu/baseline/: job_submission.sh
job_scripts/ppo_mujoco/cpu/baseline_with_layernorm/: job_submission.sh
job_scripts/ppo_mujoco/cpu/brax_paper_baseline/: job_submission.sh
job_scripts/ppo_mujoco/cpu/longer_run_baseline/: job_submission.sh
requirements/: requirements-atari-ppo-compute-canada.txt  requirements-ppo-atari.txt  updated-atari-cc-reqs.txt
requirements/ppo_atari/: requirements-compute-canada-ppo-atari.txt
requirements/ppo_brax/gpu/: ppo_brax_compute_canada_requirements.txt
requirements/ppo_mujoco/cpu/: ppo_mujoco_compute_canada_requirements.txt
