[project]
name = "occam-shaving-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "brax>=0.13.0",
 "distrax>=0.1.7",
 "flax>=0.12.0",
 "gymnax>=0.0.9",
 "jax>=0.7.2",
 "navix>=0.7.4",
 "numpy>=2.3.3",
 "optax>=0.2.6",
]
